adding basic stucual parts

--- a/Home.html
+++ b/Home.html
@@ -9,6 +9,9 @@
     <link href="./script.js" defer>
 </head>
 <body>
+    <h1>To Do List</h1>
+    <textarea placeholder="Add Item"></textarea>
+    <button>Add</button>
     
 </body>
 </html>
