--- a/Home.html
+++ b/Home.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="./Home.css">
-    <link href="./script.js" defer>
+    <script src="./script.js" defer></script>
 </head>
 <body>
-    <h1>To Do List</h1>
-    <textarea placeholder="Add Item"></textarea>
-    <button>Add</button>
-    
+    <div class="container">
+        <h1>To-Do List</h1>
+        <form>
+          <input type="text" id="task" placeholder="Enter a task">
+          <button type="button" id="add-btn">Add Task</button>
+        </form>
+        <ul id="task-list">
+        </ul>
+      </div>
 </body>
 </html>
