--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+  <div>
+    <canvas id="gradient-canvas"  />
+  </div>
     <h1>Task Calender</h1>
 
     <div id="modal" class="modal">
@@ -33,8 +36,9 @@
     <div class="calendar">
         <div class="month">
           <div class="prev">&#10094;</div>
-          <div class="next">&#10095;</div>
           <div class="month-name"></div>
+          <div class="next">&#10095;</div>
+          
         </div>
         <div class="weekdays">
           <div>Sun</div>
