--- a/index.html
+++ b/index.html
@@ -7,14 +7,20 @@
     <title>Home</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="script.js" defer></script>
+    <link  href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css"   rel="stylesheet"  type='text/css'>
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.css" rel="stylesheet"  type='text/css'>
+    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 </head>
 <body>
 
     <div>
       <canvas id="gradient-canvas"></canvas>
     </div>
-    <header>
-      <h1>Task Calendar</h1>
+    <header class="header1" data-aos="slide-down" data-aos-duration="1000"  data-aos-offset="-10000" data-aos-easing="ease-in-out" >
+      <a href="index.html"><h1 class='logo' id="logo">TC</h1></a>
+        <h1 class="title">Task Calender</h1>
+       
     </header>
     
     <div id="modal" class="modal">
@@ -57,4 +63,5 @@
 
 
 </body>
+<script>AOS.init();</script>
 </html>
